| Summary: | ASTERISK-25297: Crashes running channels/pjsip/resolver/srv/failover/in_dialog testsuite tests | ||
| Reporter: | Richard Mudgett (rmudgett) | Labels: | |
| Date Opened: | 2015-07-30 16:50:15 | Date Closed: | 2015-07-31 11:56:28 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_pjsip_session |
| Versions: | 13.4.0 | Frequency of Occurrence | Occasional |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) backtrace_7332.txt ( 1) backtrace_7704.txt ( 2) transport_tcp_full.txt ( 3) transport_unspecified_full.txt | |
| Description: | Two testsuite tests crashed in the same place as a result of an INVITE being CANCELed.
{{tests/channels/pjsip/resolver/srv/failover/in_dialog/transport_unspecified}} {{tests/channels/pjsip/resolver/srv/failover/in_dialog/transport_tcp}} The session pointer is no longer in the {{inv->mod_data\[session_module.id\]}} location because the INVITE transaction has reached the terminated state. The tests were run on master since these were DNS resolver tests but the crash potential is also in v13. | ||
| Comments: | By: Richard Mudgett (rmudgett) 2015-07-30 16:56:57.668-0500 [^backtrace_7332.txt] - Crash for the tests/channels/pjsip/resolver/srv/failover/in_dialog/transport_tcp test. [^backtrace_7704.txt] - Crash for the tests/channels/pjsip/resolver/srv/failover/in_dialog/transport_unspecified test. | ||